# zucchini-spawner

./: CLAUDE.md  Cargo.toml  LICENSE.md  README.md  build-releases.sh  dev-watch.sh  uninstall.sh
.github/workflows/: release.yml
hermes_plugin/: __init__.py  adapter.py  plugin.yaml
src/: adapter.rs  agent.rs  atomic.rs  auth.rs  blobs.rs  claude_code.rs  control.rs  crypto.rs  envelope.rs  import.rs  main.rs  power.rs  powersync.rs  prune.rs  shell.rs  state.rs  uninstall.rs  updater.rs  writer.rs  x25519.rs
src/adapters/: claude.rs  codex.rs  cursor.rs  gemini.rs  hermes.rs  import_shared.rs  mod.rs  pi.rs
src/hermes_support/: mod.rs  plugin_install.rs  socket_server.rs  trampoline.rs
