[package]
name = "zucchini-spawner"
version = "2.0.4"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
anyhow = "1"
nix = { version = "0.29", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.37", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "rustls", "tracing"] }
sentry-tracing = "0.37"
chacha20poly1305 = "0.10"
base64 = "0.22"
gethostname = "0.5"
uuid = { version = "1", features = ["v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"
