[package]
name = "zucchini-spawner"
version = "3.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7.18"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
# `futures::future::BoxFuture` for the descriptor-registry's `fn` pointers
# in `src/adapter.rs::AdapterDescriptor`. Pinned to 0.3 to share the
# `futures-core` resolution with `futures-util` already on the graph.
futures = "0.3"
anyhow = "1"
nix = { version = "0.29", features = ["signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sentry = { version = "0.48", default-features = false, features = ["backtrace", "contexts", "panic", "reqwest", "native-tls", "tracing"] }
sentry-tracing = "0.48"
chacha20poly1305 = "0.10"
# `seal` feature: wire-format interop with libsodium's `crypto_box_seal` on iOS.
crypto_box = { version = "0.9", features = ["std", "seal"] }
base64 = "0.22"
gethostname = "0.5"
uuid = { version = "1", features = ["v5", "v7", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
# IANA→offset DB for `current_time_in_tz_line` (adapter.rs). chrono's transitive
# `iana-time-zone` only reads the host zone name, not the offset database.
chrono-tz = "0.10"
# Zero K_machine plaintext on drop. Pinned to match the version `crypto_box`
# pulls in transitively (1.8.x as of crypto_box 0.9.1) so a future `cargo update`
# can't bump us past the transitive constraint and re-trigger SemVer dual-version.
zeroize = "1.8"
smallvec = "1"
# Read-only walk over `~/Library/Application Support/Cursor/User/globalStorage/state.vscdb`
# in `adapters/cursor.rs::import`. `bundled` ships the SQLite source so we
# don't depend on a system libsqlite3 at the version we tested with — same
# trade-off the rest of the Rust ecosystem makes. No `vtab` / `serde_json`
# integration features: we only need basic prepared-statement reads.
rusqlite = { version = "0.39", features = ["bundled"] }

# Force vendored OpenSSL on Linux so cross-builds don't need libssl-dev in the
# Docker image. Pulled in transitively by sentry → reqwest-0.13 → native-tls.
[target.'cfg(target_os = "linux")'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation-sys = "0.8"

# O_NOFOLLOW for atomic_write_private on shared-UID hosts.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
